# tg_bot_template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
bot/: alembic.ini  main.py
bot/core/: config.py
bot/core/enums/: envs.py
bot/core/feature/: dto.py  registry.py
bot/core/keyboard/: registry.py
bot/core/models/: __init__.py  base.py  engine.py  user.py
bot/core/models/mixins/: __init__.py  created_at_mixin.py  int_pk_mixin.py  uuid_pk_mixin.py
bot/core/providers/: app.py  database.py  feature.py  keyboard.py  redis.py  service.py  ui.py  uow.py
bot/core/redis/: app.py
bot/core/schemas/: feature.py  keyboard.py  user.py
bot/filters/: __init__.py  is_admin.py  is_not_registered.py  is_registered.py
bot/migrations/: env.py
bot/migrations/versions/: 2025_06_10_1311-f4c2b3afd47a_create_users_table.py
bot/repositories/: abc.py  redis.py  sqlalchemy.py  user.py
bot/routers/: __init__.py
bot/routers/callback_query/: __init__.py
bot/routers/message/: __init__.py  admin.py  user.py
bot/routers/my_chat_member/: __init__.py  user.py
bot/services/: abc.py  user.py
bot/services/ui/: keyboard_builder.py  menu.py
bot/uow/: abc.py  sqlalchemy.py
tests/: conftest.py
tests/tests_e2e/: test_filling_profile.py  test_game_session.py  test_registration.py
